# skill-mcp

./: .pre-commit-config.yaml  BREAKING_CHANGES.md  CLAUDE.md  GRAPH.md  KNOWLEDGE.md  README.md  REFACTORING_PLAN.md  pyproject.toml
example-skill/references/: formats.md
example-skill/scripts/: fetch_data.py  process_csv.py
src/skill_mcp/: models.py  models_crud.py  server.py
src/skill_mcp/core/: __init__.py  config.py  exceptions.py
src/skill_mcp/services/: __init__.py  env_service.py  file_service.py  graph_queries.py  graph_service.py  knowledge_service.py  script_service.py  skill_service.py  template_service.py
src/skill_mcp/tools/: __init__.py  env_file_crud.py  graph_crud.py  node_crud.py  query_graph.py  relationship_crud.py  script_tools.py  skill_crud.py  skill_env_crud.py  skill_files_crud.py
src/skill_mcp/utils/: __init__.py  ast_analyzer.py  graph_utils.py  path_utils.py  script_detector.py  yaml_parser.py
tests/: conftest.py  test_ast_analyzer.py  test_env_service.py  test_file_service.py  test_graph_crud.py  test_graph_queries.py  test_graph_service.py  test_graph_service_new.py  test_graph_utils.py  test_knowledge_service.py  test_node_crud.py  test_node_models.py  test_path_utils.py  test_query_graph.py  test_relationship_crud.py  test_script_detector.py  test_script_service.py  test_skill_crud.py  test_skill_env_crud.py  test_skill_files_crud.py  test_skill_service.py  test_template_validation.py  test_yaml_parser.py
tests/integration/: test_mcp_server.py
