[project]
name = "skill-mcp"
version = "0.1.1"
description = "A Model Context Protocol (MCP) server for managing Claude skills"
authors = [
    {name = "fkesheh"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "claude", "skills", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
skill-mcp-server = "skill_mcp.server:run"

[project.urls]
Homepage = "https://github.com/fkesheh/skill-mcp"
Documentation = "https://github.com/fkesheh/skill-mcp#readme"
Repository = "https://github.com/fkesheh/skill-mcp"
Issues = "https://github.com/fkesheh/skill-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.4",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skill_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["example-skill"]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and unused imports (F401)
select = ["E", "F", "I", "W"]
# Ignore line length in strings and comments
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.mypy]
python_version = "3.10"
# Strict type checking
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
# For strict dicts and lists
disallow_untyped_defs = true
# Allow some flexibility for external libraries
ignore_missing_imports = true
show_error_codes = true

# Relax strict mode for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_any_generics = false

# Exclude example files
[[tool.mypy.overrides]]
module = "example-skill.*"
ignore_errors = true
